...
                android:layout_height="wrap_content"
                android:background="@color/colorLine"
                android:minHeight="@dimen/margin_xxsmall"
                android:orientation="horizontal">

                <com.app.infideap.stylishwidget.view.ATextView
                    android:id="@+id/button_previous"
                    style="@style/Button.Accent.Fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/previous"
                    android:textAppearance="@style/TextView.AsButton" />

                <com.app.infideap.stylishwidget.view.ATextView
                    android:id="@+id/button_next"
                    style="@style/Button.Success.Fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next"
                    android:textAppearance="@style/TextView.AsButton" />
...
